# opam-repo-ci

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  dune  dune-project  local-test.sh  ocaml-ci-service.opam  opam-ci-check-lint.opam  opam-ci-check.opam  opam-repo-ci-api.opam  opam-repo-ci-client.opam  opam-repo-ci-service.opam  opam-repo-ci-web.opam  prototype.sh  revdeps_prototype.opam  stack.yml
.github/workflows/: docs.yml
api/: client.ml  client.mli  dune
client/: dune  main.ml
dev/: dev.sh
doc/: doc.ml  dune  platforms.md
docker/: Caddyfile
lib/: analyse.ml  analyse.mli  build.ml  build.mli  build_intf.ml  builder.ml  ci_check_ref.ml  cluster_build.ml  cluster_build.mli  common.ml  dir_helpers.ml  dune  dune_helpers.ml  env.ml  index.ml  index.mli  integration_test.ml  lint.ml  lint.mli  lint_error.ml  local_build.ml  local_build.mli  opam_build.ml  opam_build.mli  opam_ci_check.ml  opam_helpers.ml  opam_package.ml  opam_version.ml  opam_version.mli  packageOpt.ml  platform.ml  prototype.ml  revdeps.ml  revdeps.mli  spec.ml  spec.mli  status_tree.ml  status_tree.mli  summary.ml  test.ml  (+3 more)
opam-ci-check/: .gitignore  CONTRIBUTING.md  README.md
opam-ci-check/.github/workflows/: docs.yml
opam-ci-check/lib/: compiler_version.ml  dir_helpers.ml  dune  dune_helpers.ml  env.ml  lint.ml  lint.mli  lint_error.ml  opam_build.ml  opam_build.mli  opam_ci_check.ml  opam_helpers.ml  opam_version.ml  opam_version.mli  revdeps.ml  revdeps.mli  spec.ml  spec.mli  test.ml  test.mli  variant.ml  variant.mli
opam-ci-check/lint/: dune  lint_error.ml  opam_ci_check_lint.ml  opam_ci_check_lint.mli  opam_helpers.ml
opam-ci-check/test/: build.t  dune  lint.t  test_opam_ci_check.ml
opam-ci-check/test/patches/: a-1-unexpected-file.patch  a-1-unnecessary-fields.patch  b-correct.patch  b-incorrect-opam.patch  b.0.0.1-correct.patch  b.0.0.1-no-dune-lower-bound.patch  b.0.0.3-correct.patch  levenshtein-1.patch  levenshtein-2.patch
opam-ci-check/test/scripts/: setup_repo.sh  setup_sources.sh
service/: api_impl.ml  api_impl.mli  build.ml  build.mli  capnp_setup.ml  capnp_setup.mli  conf.ml  dune  github.ml  local.ml  main.ml  metrics.ml  metrics.mli  node.ml  node.mli  pipeline.ml  pipeline.mli
test/: analyse.t  dump.ml  dump.mli  dune  git_util.ml  lint-correct.t  lint-incorrect-opam.t  lint-name-collision.t  lint.t  revdeps-correct.t  revdeps.t  specs.expected  test.ml  test_index.ml  test_lint.ml  test_status_tree.ml  umask-022.t
test/dummy-opam-repository/: a-1.patch  a.patch  a_1-name-collision.patch  b-correct.patch  b-incorrect-opam.patch  b-no-author.patch  b-unknown-field.patch
test/patches/: a-1-insignificant-change.patch  a-1-unmatched-name-version.patch  a-1-update.patch  a-1.patch  a_1-name-collision.patch  b-correct.patch  b-incorrect-opam.patch  b-significant-change.patch  levenshtein-1.patch  levenshtein-2.patch
test/scripts/: setup_repo.sh
web-ui/: backend.ml  backend.mli  badges.ml  dune  github.ml  log.ml  main.ml  status_tree.ml  status_tree.mli  style.ml
