opam-version: "2.0"
synopsis:
  "Library to lint opam files submitted to the opam repository"
description:
  "opam-ci-check-lint exposes the lint functionality used in the opam repo CI and opam-ci-check. It can be used in other packages such as opam publishing tools to ensure that the published package opam files are correct."
maintainer: [
  "Puneeth Chaganti <punchagan@muse-amuse.in>"
  "Shon Feder <shon.feder@gmail.com>"
]
authors: [
  "Puneeth Chaganti <punchagan@muse-amuse.in>"
  "Shon Feder <shon.feder@gmail.com>"
]
license: "Apache-2.0"
tags: ["opam" "ci" "lint"]
homepage: "https://github.com/ocurrent/opam-repo-ci/tree/master/opam-ci-check"
doc: "https://www.ocurrent.org/opam-repo-ci/opam-ci-check-lint/index.html"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.16"}
  "sexplib"
  "opam-state" {>= "2.3.0~alpha1"}
  "opam-format" {>= "2.3.0~alpha1"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
