opam-version: "2.0"
synopsis: "Cap'n Proto API for opam-repo-ci"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Kate <kit-ty-kate@outlook.com>"
  "Thomas Leonard <talex5@gmail.com>"
  "Craig Ferguson <me@craigfe.io>"
  "Anil Madhavapeddy <anil@recoil.org>"
]
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "dune" {>= "3.7"}
  "ocaml" {>= "4.14.1"}
  "current_rpc"
  "capnp" {>= "3.4.0"}
  "capnp-rpc-lwt"
  "dockerfile"
  "odoc" {with-doc}
]
conflicts: [
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
