opam-version: "2.0"
synopsis: "Cap'n Proto API for opam-repo-ci"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Kate <kit-ty-kate@outlook.com>"
  "Thomas Leonard <talex5@gmail.com>"
  "Craig Ferguson <me@craigfe.io>"
  "Anil Madhavapeddy <anil@recoil.org>"
]
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "dune" {>= "3.16"}
  "ocaml" {>= "4.14.1"}
  "current_rpc"
  "capnp" {>= "3.4.0"}
  "capnp-rpc-lwt"
  "dockerfile" {>= "8.2.3"}
  "dockerfile-opam" {>= "8.2.3"}
  "odoc" {with-doc}
  "current" {>= "0.6.6"}
  "current_docker"
  "current_github"
  "current_ocluster"
  "logs"
  "mula" {>= "0.1.2"}
  "obuilder-spec"
  "ocaml-version" {>= "3.6.9"}
  "opam-format" {>= "2.3.0~alpha1"}
  "opam-state" {>= "2.3.0~alpha1"}
  "ppx_deriving" {>= "5.2.1"}
  "ppx_deriving_yojson"
  "sexplib" {>= "v0.16.0"}
]
conflicts: [
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
# See https://github.com/ocurrent/ocaml-ci/issues/931
available: !(os-distribution = "debian" & os-version = "12" & arch = "x86_32")
