opam-version: "2.0"
synopsis: "Command-line client for opam-repo-ci"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Kate <kit-ty-kate@outlook.com>"
  "Thomas Leonard <talex5@gmail.com>"
  "Craig Ferguson <me@craigfe.io>"
  "Anil Madhavapeddy <anil@recoil.org>"
]
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "logs"
  "fmt" {>= "0.8.7"}
  "dune" {>= "3.16"}
  "ocaml" {>= "4.14.1"}
  "current_rpc"
  "capnp-rpc-unix"
  "opam-repo-ci-api"
  "dockerfile" {>= "8.2.3"}
  "odoc" {with-doc}
]
conflicts: [
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
# See https://github.com/ocurrent/ocaml-ci/issues/931
available: !(os-distribution = "debian" & os-version = "12" & arch = "x86_32")
