opam-version: "2.0"
synopsis: "Test OCaml projects on GitHub"
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "prometheus-app" {>= "1.0"}
  "prometheus" {>= "0.7"}
  "ppx_sexp_conv"
  "ppx_deriving_yojson"
  "ppx_deriving"
  "mirage-crypto-rng" {>= "0.8.8"}
  "logs"
  "fmt" {>= "0.8.7"}
  "dune" {>= "3.3"}
  "ocaml" {>= "4.12.0"}
  "current_incr" {>= "0.6.0"} # see https://github.com/ocurrent/opam-repo-ci/pull/161
  "current_git"
  "current_github"
  "current_docker"
  "current_web"
  "current_rpc"
  "obuilder-spec"
  "memtrace"
  "capnp-rpc-lwt" {>= "0.8.0"}
  "capnp-rpc-unix" {>= "0.8.0"}
  "opam-repo-ci-api"
  "opam-state" {>= "2.1.0~beta4"}
  "opam-format" {>= "2.1.0~beta4"}
  "opam-file-format" {>= "2.1.2"}
  "sexplib" {>= "v0.14.0"}
  "conf-libev"
  "dockerfile" {>= "6.3.0"}
  "dockerfile-opam" {>= "6.3.0"}
  "ocaml-version" {>= "2.4.0"}
  "alcotest" {>= "1.0.0" & with-test}
  "alcotest-lwt" {>= "1.0.1" & with-test}
  "odoc" {with-doc}
]
conflicts: [
  "ocaml-migrate-parsetree" {= "1.7.1"}
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
