opam-version: "2.0"
synopsis: "Test OCaml projects on GitHub"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Kate <kit-ty-kate@outlook.com>"
  "Thomas Leonard <talex5@gmail.com>"
  "Craig Ferguson <me@craigfe.io>"
  "Anil Madhavapeddy <anil@recoil.org>"
]
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "routes" {>= "2.0.0"} # needed for ocurrent
  "prometheus-app" {>= "1.2"} # needed for ocurrent
  "prometheus" {>= "1.2"} # needed for ocurrent
  "ppx_sexp_conv"
  "ppx_deriving_yojson"
  "ppx_deriving"
  "mirage-crypto-rng" {>= "0.11.0"}
  "logs"
  "fmt" {>= "0.8.7"}
  "dune" {>= "3.7"}
  "ocaml" {>= "4.14.1"}
  "current_incr" {>= "0.6.0"} # see https://github.com/ocurrent/opam-repo-ci/pull/161
  "current_git"
  "current_github"
  "current_docker"
  "current_web"
  "current_rpc"
  "obuilder-spec"
  "memtrace" {>= "0.1.1"}
  "capnp-rpc-lwt" {>= "0.8.0"}
  "capnp-rpc-unix" {>= "0.8.0"}
  "opam-repo-ci-api"
  "opam-state" {>= "2.2.0~beta1"}
  "opam-format" {>= "2.2.0~beta1"}
  "opam-file-format" {>= "2.1.2"}
  "sexplib" {>= "v0.14.0"}
  "conf-libev"
  "dockerfile" {>= "6.3.0"}
  "dockerfile-opam" {>= "6.3.0"}
  "ocaml-version" {>= "2.4.0"}
  "mula" {>= "0.1.2"}
  "alcotest" {>= "1.0.0" & with-test}
  "alcotest-lwt" {>= "1.0.1" & with-test}
  "odoc" {with-doc}

  # pin depends
  "current"
  "current_rpc"
  "current_docker"
  "current_git"
  "current_github"
  "current_rpc"
  "current_web"
  "ocluster-api"
  "current_ocluster"
]
pin-depends: [
  ["current.~dev"        "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_docker.~dev" "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_git.~dev"    "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_github.~dev" "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_rpc.~dev"    "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_rpc.~dev"    "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_web.~dev"    "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]

  ["ocluster-api.~dev"      "git+https://github.com/ocurrent/ocluster.git#912ecfd38f003c6f537abca7e5313973b15ba615"]
  ["current_ocluster.~dev"  "git+https://github.com/ocurrent/ocluster.git#912ecfd38f003c6f537abca7e5313973b15ba615"]
]
conflicts: [
  "ocaml-migrate-parsetree" {= "1.7.1"}
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
