opam-version: "2.0"
synopsis: "Test OCaml projects on GitHub"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Kate <kit-ty-kate@outlook.com>"
  "Thomas Leonard <talex5@gmail.com>"
  "Craig Ferguson <me@craigfe.io>"
  "Anil Madhavapeddy <anil@recoil.org>"
]
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "routes" {>= "2.0.0"} # needed for ocurrent
  "prometheus-app" {>= "1.2"} # needed for ocurrent
  "prometheus" {>= "1.2"} # needed for ocurrent
  "ppx_sexp_conv"
  "ppx_deriving_yojson"
  "ppx_deriving" {with-test}
  "mirage-crypto-rng" {>= "0.11.0"}
  "logs"
  "fmt" {>= "0.8.7"}
  "dune" {>= "3.16"}
  "ocaml" {>= "4.14.1"}
  "current_incr" {>= "0.6.0"} # see https://github.com/ocurrent/opam-repo-ci/pull/161
  "current" {>= "0.6.6"}
  "current_git"
  "current_github"
  "current_docker"
  "current_web"
  "current_rpc"
  "current_ocluster"
  "obuilder-spec"
  "ocluster-api"
  "memtrace" {>= "0.1.1"}
  "capnp-rpc-lwt" {>= "0.8.0"}
  "capnp-rpc-unix" {>= "0.8.0"}
  "opam-state" {>= "2.3.0~alpha1"}
  "opam-format" {>= "2.3.0~alpha1"}
  "opam-file-format" {>= "2.1.2"}
  "sexplib" {>= "v0.14.0"}
  "conf-libev"
  "dockerfile" {>= "8.2.3"}
  "dockerfile-opam" {>= "8.2.3"}
  "ocaml-version" {>= "3.6.9"}
  "mula" {>= "0.1.2"}
  "alcotest" {>= "1.0.0" & with-test}
  "alcotest-lwt" {>= "1.0.1" & with-test}
  "odoc" {with-doc}

  # Internal dependencies
  "opam-ci-check"
  "opam-repo-ci-api"
]
conflicts: [
  "ocaml-migrate-parsetree" {= "1.7.1"}
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
# See https://github.com/ocurrent/ocaml-ci/issues/931
available: !(os-distribution = "debian" & os-version = "12" & arch = "x86_32")
