opam-version: "2.0"
synopsis: "Web-server frontend for opam-repo-ci"
maintainer: [
  "Kate <kit.ty.kate@disroot.org>" "Tim McGilchrist <timmcgil@gmail.com>"
]
authors: [
  "Kate <kit.ty.kate@disroot.org>"
  "Thomas Leonard <talex5@gmail.com>"
  "Craig Ferguson <me@craigfe.io>"
  "Anil Madhavapeddy <anil@recoil.org>"
]
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "dune" {>= "3.7"}
  "yojson"
  "logs"
  "fmt" {>= "0.8.7"}
  "ocaml" {>= "4.14.1"}
  "current_rpc"
  "current_ansi"
  "prometheus-app"
  "cmdliner" {>= "1.1.0"}
  "lwt"
  "cohttp-lwt-unix" {>= "2.2.0"}
  "mirage-crypto-rng" {>= "0.11.0"}
  "tyxml"
  "capnp-rpc-unix"
  "opam-repo-ci-api"
  "conf-libev"
  "dockerfile"
  "ppx_deriving_yojson"
  "odoc" {with-doc}
]
conflicts: [
  "ocaml-migrate-parsetree" {= "1.7.1"}
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
