opam-version: "2.0"
synopsis: "Web-server frontend for opam-repo-ci"
maintainer: "Tim McGilchrist <timmcgil@gmail.com>"
authors: [
  "Kate <kit-ty-kate@outlook.com>"
  "Thomas Leonard <talex5@gmail.com>"
  "Craig Ferguson <me@craigfe.io>"
  "Anil Madhavapeddy <anil@recoil.org>"
]
homepage: "https://github.com/ocurrent/opam-repo-ci"
bug-reports: "https://github.com/ocurrent/opam-repo-ci/issues"
depends: [
  "dune" {>= "3.7"}
  "yojson"
  "logs"
  "fmt" {>= "0.8.7"}
  "ocaml" {>= "4.14.1"}
  "current_rpc"
  "current_ansi"
  "prometheus-app"
  "cmdliner" {>= "1.1.0"}
  "lwt"
  "cohttp-lwt-unix" {>= "2.2.0"}
  "mirage-crypto-rng" {>= "0.11.0"}
  "tyxml"
  "capnp-rpc-unix"
  "opam-repo-ci-api"
  "conf-libev"
  "dockerfile"
  "ppx_deriving_yojson"
  "odoc" {with-doc}
  "capnp-rpc-lwt" {>= "1.2.3"}
  "mula" {>= "0.1.2"}
  "opam-format" {>= "2.2.0~beta1"}
  "opam-state" {>= "2.2.0~beta1"}
  "ppx_deriving" {>= "5.2.1"}
  "sexplib" {>= "v0.16.0"}

  # pin-depends
  ## ocurrent
  "current"
  "current_docker"
  "current_github"

  ## ocluster
  "current_ocluster"

  ## ocaml-dockerfile
  "dockerfile"
  "dockerfile-opam"

  "ocaml-version"

  "obuilder-spec"
]
pin-depends: [
  ["current.0.6.6~dev"        "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_docker.0.6.6~dev" "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]
  ["current_github.0.6.6~dev" "git+https://github.com/ocurrent/ocurrent.git#e43b6c5c896a4cc5ca5c1d0cfbf10a6401fbcd47"]

  ["current_ocluster.0.3.0~dev"   "git+https://github.com/ocurrent/ocluster.git#912ecfd38f003c6f537abca7e5313973b15ba615"]

  ["dockerfile.8.2.1~dev"       "git+https://github.com/ocurrent/ocaml-dockerfile.git#85891cad42189a03960b48792293e8fb3a18552c"]
  ["dockerfile-opam.8.2.1~dev"  "git+https://github.com/ocurrent/ocaml-dockerfile.git#85891cad42189a03960b48792293e8fb3a18552c"]

  ["ocaml-version.3.6.7~dev"  "git+https://github.com/ocurrent/ocaml-version.git#b80aad5425c7dd6f1e6f8925f5719c72f8b8f7fa"]

  ["obuilder-spec.0.6.0~dev" "git+https://github.com/ocurrent/obuilder.git#c0eb046f52ca0c5fd9b560d4bdc0cb11c852d4f7"]
]
conflicts: [
  "ocaml-migrate-parsetree" {= "1.7.1"}
  "conduit-lwt-unix" {< "4.0.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/opam-repo-ci.git"
