(executable
 (name doc)
 (public_name opam_repo_ci_service_doc)
 (package opam-repo-ci-service)
 (libraries opam_repo_ci))

(rule
 (package opam-repo-ci-service)
 (target platforms-new.md)
 (action
  (run %{dep:./doc.exe} -o %{target})))

(rule
 (package opam-repo-ci-service)
 (alias doc)
 (mode promote)
 (action
  (diff ./platforms.md ./platforms-new.md)))
