(library
 (name opam_repo_ci)
 (package opam-repo-ci-api)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries
  logs
  sexplib
  current
  current_docker
  current_github
  current.term
  current.cache
  dockerfile
  ppx_deriving_yojson.runtime
  ocaml-version
  dockerfile-opam
  current_ocluster
  capnp-rpc-lwt
  obuilder-spec
  opam-format
  opam-state
  opam-repo-ci-api
  opam_ci_check))
