(executables
 (names main local)
 (package opam-repo-ci-service)
 (public_names opam-repo-ci-service opam-repo-ci-local)
 (libraries logs.fmt
            fmt.tty
            current
            current_web
            current_docker
            current_git
            current_github
            current_rpc
            capnp-rpc-unix
            mirage-crypto-rng.unix
            ocluster-api
            opam_repo_ci
            opam-repo-ci-api
            prometheus)
 (preprocess (pps ppx_deriving_yojson)))
