(test
 (name test)
 (package opam-repo-ci-service)
 (libraries opam_repo_ci alcotest alcotest-lwt ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_yojson))
 (deps
  (glob_files ./patches/*)))

(cram
 (deps
  %{bin:opam-repo-ci-local}
  ./scripts/setup_repo.sh
  (glob_files ./patches/*)))

(rule
 (with-stdout-to
  specs.output
  (run ./test.exe --dump-specs)))

(rule
 (alias runtest)
 (action
  (diff specs.expected specs.output)))
