(test
 (name test)
 (package opam-repo-ci-service)
 (libraries
  opam_ci_check
  opam_repo_ci
  alcotest
  alcotest-lwt
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_yojson))
 (deps
  (glob_files ./patches/*)))

(cram
 (package opam-repo-ci-service)
 (deps
  %{bin:opam-repo-ci-local}
  %{bin:opam-ci-check}
  ./scripts/setup_repo.sh
  (glob_files ./patches/*)))

(rule
 (package opam-repo-ci-service)
 (alias runtest)
 (action
  (with-stdout-to
   specs.output
   (run ./test.exe --dump-specs))))

(rule
 (package opam-repo-ci-service)
 (alias runtest)
 (action
  (diff specs.expected specs.output)))
