(executable
 (name main)
 (public_name opam-repo-ci-web)
 (package opam-repo-ci-web)
 (libraries
  lwt.unix
  current_ansi
  cohttp-lwt-unix
  tyxml
  prometheus-app.unix
  opam_repo_ci
  opam-repo-ci-api
  capnp-rpc-unix
  yojson
  ppx_deriving_yojson.runtime
  logs.cli)
 (preprocess
  (pps ppx_deriving_yojson)))
